# rsmdl

./: .gitignore  Cargo.toml  bench.py  pyproject.toml
src/: data.rs  filters.rs  lib.rs  main.rs  stats.rs
src/filters/: api.rs  filtering.rs  mod.rs  weights.rs
